--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    
+        <script>
+      document.addEventListener("click", () => {
+        document.querySelector("body").requestFullscreen();
+      });
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
@@ -9,5 +12,6 @@
   <body>
     <script src="sketch.js"></script>
   
+
 
 </body></html>
