--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       document.addEventListener("click", () => {
         document.querySelector("body").requestFullscreen();
       });
+            </script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
@@ -15,3 +16,4 @@
 
 
 </body></html>
+
